--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+potool (0.11-1) unstable; urgency=medium
+
+  * New version. Upstream and Debian are now maintained in the same Git
+    repository.
+  * Includes a patch to poedit from Jakub Wilk for tempfile naming and
+    cleanup. Closes: #533833, #533835
+  * Includes changes to check return codes/values from calls which can write
+    to the filesystem. Closes: #546811
+
+ -- Marcin Owsiany <porridge@debian.org>  Tue, 22 Sep 2009 19:32:59 +0100
+
 potool (0.10-1) unstable; urgency=low
 
   * New upstream version
