--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+potool (0.12-1) unstable; urgency=low
+
+  * New version.
+    - Use the (correct) implicit rule to link potool. Fixes ubuntu bug 771140.
+  * Ignore debhelper logfile.
+
+ -- Marcin Owsiany <porridge@debian.org>  Tue, 14 Jun 2011 08:41:17 +0200
+
 potool (0.11-2) unstable; urgency=high
 
   * Update Polish manpage path in update-alternatives invocation. The wrong
