--- a/tests/1/f t.po
+++ b/tests/1/f t.po
@@ -17,6 +17,12 @@ msgstr ""
 msgid "Select the style of control"
 msgstr "Wybierz rodzaj sterowania"
 
+#: ../some/file.cc:1
+#, fuzzy
+#| msgid "What is your name?"
+msgid "What was your name?"
+msgstr "Jak sie nazywasz?"
+
 #: ../gtali/gyahtzee.c:150
 #, c-format
 msgid "%s wins the game with %d point"
@@ -37,5 +43,6 @@ msgstr[0] "%s wygral(a) gre punktem"
 #~ msgstr "nieznany"
 
 #, fuzzy
+#~| msgid "Load CD-ROM drivers from removable media?"
 #~ msgid "Load OEM supported drivers from driver injection disk?"
 #~ msgstr "Zaladowac sterowniki CD-ROMu z urzadzenia zewnetrznego?"
