Document the fact that potool re-wraps all lines.

--- a/poedit.pl.1
+++ b/poedit.pl.1
@@ -58,6 +58,8 @@ znaki ASCII, w związku z czym edytor będzie mógł zinterpretować jego kodowa
 jako kodowanie locale. To z kolei spowoduje, że po połączeniu z tymczasowym
 plikiem, wyjściowy będzie nieprawidłowy. Zgłoszenie błędu Debiana #297074
 zawiera przykładowy opis takiej sytuacji.
+.SH BŁĘDY
+Ten program zawija po swojemu wszystkie linie w edytowanych plikach.
 .SH ZOBACZ TAKŻE
 .BR potool (1),
 .BR postats (1),
