--- a/potool.1
+++ b/potool.1
@@ -109,6 +109,8 @@ entries
 The last two examples are implemented as the
 .BR potooledit (1)
 program.
+.SH BUGS
+The program re-wraps lines in all strings in the output.
 .SH SEE ALSO
 .BR potooledit (1),
 .BR postats (1),
