--- a/potool.pl.1
+++ b/potool.pl.1
@@ -116,6 +116,8 @@ starych.
 .P
 Ostatnie dwa przykłady są zaimplementowane jako program
 .BR potooledit (1).
+.SH BŁĘDY
+Ten program zawija po swojemu wszystkie linie na wyjściu.
 .SH ZOBACZ TAKŻE
 .BR potooledit (1),
 .BR postats (1),
