--- a/poedit.1
+++ b/poedit.1
@@ -57,6 +57,8 @@ characters, which means your editor will be free to interpret this as your
 default locale encoding. This in turn, will make the file invalid when it is
 merged together with the already translated messages. See Debian bug #297074
 for an example of this happening.
+.SH BUGS
+The program re-wraps lines in all strings in the edited file.
 .SH SEE ALSO
 .BR potool (1),
 .BR postats (1),
