--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+potool (0.16-1) experimental; urgency=low
+
+  * New version
+    - adds an option to preserve formatting. Closes: #518903
+
+ -- Marcin Owsiany <porridge@debian.org>  Sat, 15 Sep 2012 11:37:56 +0100
+
 potool (0.15-1) unstable; urgency=low
 
   * New version
