--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+potool (0.19-2) UNRELEASED; urgency=medium
+
+  * Trim trailing whitespace.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
+
 potool (0.19-1) unstable; urgency=medium
 
   * New upstream version
@@ -241,4 +247,3 @@ potool (0.1-1) unstable; urgency=low
     language first.
 
  -- Marcin Owsiany <porridge@pandora.info.bielsko.pl>  Wed, 13 Dec 2000 00:39:40 +0100
-
