--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 potool (0.19-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
+  * Bump debhelper from deprecated 9 to 12.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
