--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ potool (0.19-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
   * Bump debhelper from deprecated 9 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
