--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ potool (0.19-2) UNRELEASED; urgency=medium
   * Bump debhelper from deprecated 9 to 12.
   * Set debhelper-compat version in Build-Depends.
   * Use canonical URL in Vcs-Git.
+  * Update standards version to 4.5.0, no changes needed.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
