--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ potool (0.19-2) UNRELEASED; urgency=medium
   * Set debhelper-compat version in Build-Depends.
   * Use canonical URL in Vcs-Git.
   * Update standards version to 4.5.0, no changes needed.
+  * Remove constraints unnecessary since stretch:
+    + potool: Drop versioned constraint on poedit in Breaks.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
