--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ potool (0.19-2) UNRELEASED; urgency=medium
   * Update standards version to 4.5.0, no changes needed.
   * Remove constraints unnecessary since stretch:
     + potool: Drop versioned constraint on poedit in Breaks.
+  * Update watch file format version to 4.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
