--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ potool (0.19-2) UNRELEASED; urgency=medium
   * Remove constraints unnecessary since stretch:
     + potool: Drop versioned constraint on poedit in Breaks.
   * Update watch file format version to 4.
+  * Use secure URI in Homepage field.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
