--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ potool (0.19-2) UNRELEASED; urgency=medium
     + potool: Drop versioned constraint on poedit in Breaks.
   * Update watch file format version to 4.
   * Use secure URI in Homepage field.
+  * Bump debhelper from old 12 to 13.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 07:35:28 +0000
 
